ipc/ipdl/test/ipdl/ok/DeleteSub.ipdl
include protocol Delete;

sync protocol DeleteSub {
    manager Delete;

parent:
    sync __delete__(int x) returns (double d);

state START:
    recv __delete__;
};

